<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FindTeacher</string>

    <string name="connection_timeout">Connection Problem, Try Again Later!</string>
    <string name="internet_problem">Check Internet Connection, Try Again!</string>
    <string name="registar_failed">Registration Failed, Try again later!</string>
    <string name="login_failed">Login Failed, Try again later!</string>
    <string name="no_data_found">Data Not Found!</string>
    <string name="ok">Ok</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="forget_pwd">Forget Password?</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No.</string>
    <string name="old_pwd">Old Password</string>
    <string name="conf_pwd">Confirm Password</string>
    <string name="age">Your Age</string>
    <string name="gender">Gender</string>
    <string name="sign_up">Sign Up</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="already_account">Already have an account?</string>
    <string name="select_location">Select your location</string>
    <string name="pick_location">Pick your current location</string>
    <string name="next">Next</string>
    <string name="or">Or</string>
    <string name="select">Select</string>
    <string name="view_more">View More</string>
    <string name="view_details">View Details</string>
    <string name="edit_Profile">Edit Profile</string>
    <string name="session">Session</string>
    <string name="fees">Fees</string>
    <string name="view_session">View Session</string>
    <string name="short_desc">Short Description</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="video_call">Video Call</string>
    <string name="total_fees">Total Fees : </string>
    <string name="total_paid">Total Paid : </string>
    <string name="remaining">Remaining : </string>
    <string name="enrollment_detail">Enrollment Details</string>
    <string name="enrollment_date">Enrollment Date</string>
    <string name="no_of_session">No. of Sessions</string>
    <string name="fees_details">Fees Details</string>
    <string name="add_fees">Add Fees</string>
    <string name="view_paid">View Paid</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="submit">Submit</string>
    <string name="otp_label">Please Enter OTP whitch is send on student mobile</string>
    <string name="player_error">Error initializing YouTube player: %s</string>

    <string name="session_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
