<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.StudentFeesInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fees_details"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="@dimen/_18ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/enrollment_date"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:id="@+id/tv_enrollment_date"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="19 June 2019"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/rect_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Total Fees"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:id="@+id/tv_total_fees"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="Rs 3500"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/rect_shape"/>

            <LinearLayout
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_add_fees"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/add_fees"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/blue_button_bg"/>

                <Button
                    android:id="@+id/btn_view_paid"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/view_paid"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/black"
                    android:background="@drawable/yellow_button_bg"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/no_of_session"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:id="@+id/tv_no_of_session"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:textAllCaps="true"
                android:padding="@dimen/_5sdp"
                android:text="Pre +5 sessions"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/rect_shape"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>