<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.SearchLocationFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/_20sdp"
           android:layout_marginRight="@dimen/_20sdp"
           android:orientation="vertical">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/select_location"
               android:layout_gravity="center"
               android:padding="@dimen/_10sdp"
               android:textSize="@dimen/_18ssp"
               android:textColor="@color/black"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_20sdp"
               android:background="@drawable/rect_shape">

               <Spinner
                   android:id="@+id/sp_state_list"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_40sdp"/>

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_15sdp"
               android:background="@drawable/rect_shape">

               <Spinner
                   android:id="@+id/sp_city_list"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_40sdp"/>

           </LinearLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_20sdp"
               android:layout_marginBottom="@dimen/_20sdp"
               android:text="@string/or"
               android:layout_gravity="center"
               android:padding="@dimen/_10sdp"
               android:textSize="@dimen/_18ssp"
               android:textColor="@color/black"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="@dimen/_10sdp"
               android:gravity="center"
               android:background="@drawable/rect_shape">

               <TextView
                   android:id="@+id/tv_current_location"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textColor="@color/black"
                   android:textSize="@dimen/_13ssp"
                   android:lines="1"
                   android:ellipsize="end"
                   android:text="@string/pick_location"/>

               <ImageView
                   android:id="@+id/iv_update_location"
                   android:layout_width="@dimen/_30sdp"
                   android:layout_height="@dimen/_30sdp"
                   android:padding="@dimen/_5sdp"
                   android:tint="@color/black"
                   android:src="@android:drawable/ic_menu_mylocation"/>

           </LinearLayout>

           <Button
               android:id="@+id/btn_next"
               android:layout_width="@dimen/_150sdp"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_40sdp"
               android:layout_gravity="center"
               android:text="@string/next"
               android:textSize="@dimen/_14ssp"
               android:background="@drawable/yellow_button_bg"/>

       </LinearLayout>

   </LinearLayout>

</FrameLayout>