<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.EnrollmentDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrollment_detail"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/enrollment_date"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:id="@+id/tv_enrollment_date"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="19 June 2019"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/rect_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Total Fees"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:id="@+id/tv_total_fees"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="Rs 3500"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/rect_shape"/>

            <Button
                android:id="@+id/btn_view_enrollment"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/view_details"
                android:textAllCaps="false"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:background="@color/dim_yellow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/no_of_session"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:id="@+id/tv_no_of_session"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="10 (once in a month)"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/rect_shape"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>