<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".activity.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_email"
                android:tint="@color/white"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingRight="@dimen/_3sdp"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:background="@null"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/_15ssp"
                android:hint="@string/username"
                android:textColor="@color/dim_white"
                android:textColorHint="@color/dim_white"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/dim_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_passord"
                android:tint="@color/white"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingBottom="@dimen/_2sdp"/>

            <EditText
                android:id="@+id/edt_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:background="@null"
                android:hint="@string/old_pwd"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:inputType="textPassword"
                android:textColor="@color/dim_white"
                android:textColorHint="@color/dim_white"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/dim_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_passord"
                android:tint="@color/white"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingBottom="@dimen/_2sdp"/>

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:background="@null"
                android:hint="@string/conf_pwd"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:inputType="textPassword"
                android:textColor="@color/dim_white"
                android:textColorHint="@color/dim_white"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/dim_white"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textSize="@dimen/_15ssp"
            android:background="@drawable/yellow_button_bg"/>

    </LinearLayout>

</LinearLayout>