<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/AddFrame"
    android:background="@color/colorPrimary"
    tools:context=".fragment.AddFeesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fees_details"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="@dimen/_18ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/enrollment_date"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:id="@+id/tv_fees_date"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="19 June 2019"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/rect_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Total Fees"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15ssp"/>

            <EditText
                android:id="@+id/tv_fees_total_amt"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                tools:text="Rs 3500"
                android:inputType="numberDecimal"
                android:textAllCaps="true"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp"
                android:background="@drawable/rect_shape"/>

            <LinearLayout
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_add_fees"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/add_fees"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/blue_button_bg"/>

                <Button
                    android:id="@+id/btn_view_paid"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/view_paid"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/black"
                    android:background="@drawable/yellow_button_bg"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_otp_view"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:background="@drawable/rect_shape"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/otp_label"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/_8ssp"
                    android:textColor="@color/primary_text_color"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/code_one"
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:background="@drawable/square_shape"
                        android:inputType="number"
                        android:maxLength="1"
                        android:hint="*"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/code_two"
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@drawable/square_shape"
                        android:inputType="number"
                        android:maxLength="1"
                        android:hint="*"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/code_three"
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@drawable/square_shape"
                        android:inputType="number"
                        android:maxLength="1"
                        android:hint="*"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/code_four"
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@drawable/square_shape"
                        android:inputType="number"
                        android:maxLength="1"
                        android:hint="*"
                        android:textAlignment="center" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_fees_submit"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/blue_button_bg"/>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</FrameLayout>